feat: 添加图标和其他信息

--- a/src-frontend/entry/commonHead.pug
+++ b/src-frontend/entry/commonHead.pug
@@ -1,2 +1,8 @@
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no')
+meta(name='keywords' content='地下偶像,地偶')
+meta(name='apple-mobile-web-app-title' content='地下偶像活动汇总')
+meta(name='author' content='告白，花，狼@duan602728596')
+meta(http-equiv='X-Frame-Options' content='DENY')
+link(rel='shortcut icon' href=require('./favicon.ico'))
+link(rel='apple-touch-icon' href=require('./favicon.png'))
